// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`кнопка клик на кнопку 1`] = `
<DocumentFragment>
  <button
    class="btn btn medium"
    data-testid="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`кнопка разные тесты 1`] = `
<button
  class="btn btn medium"
  data-testid="button"
>
  Button text
</button>
`;
